--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -59,10 +59,10 @@ I will want to keep making new videos for threejs posts this week until I have a
 * start post #978 on threejs-object3d-world-to-local
 
 ### () - THU 04/14/2022
-* quick edit threejs-math-utils
-* quick edit threejs-examples-build-a-box
-* quick edit threejs-examples-waves
-* quick edit threejs-raycaster
+* (done) quick edit threejs-math-utils
+* (done) quick edit threejs-examples-build-a-box
+* (done) quick edit threejs-examples-waves
+* (done) quick edit threejs-raycaster
 
 * () videoground-beta-world-videos - bw-ep1-simp-logos
 * () videoground-beta-world - house1-bedroom
