--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -54,24 +54,30 @@ For this month I want to make the main focus on my new VideoGround project, and 
 I will want to keep making new videos for threejs posts this week until I have at least 10 for starters. Focus on posts that are all ready getting some traffic first of course.
 
 ### () - SAT 04/16/2022
+* update hexo site source with header with name of site text
+* update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
+* build and publish
+
+* () videoground-beta-world-videos - bw-ep1-simp-logos
 
 ### () - FRI 04/15/2022
 * start post #978 on threejs-object3d-world-to-local
+
+* update hexo site source with new header background
+* update hexo site source with new header self image
+
+* () videoground-beta-world-videos - bw-ep1-simp-logos
+* () videoground-blog-posts - threejs-*
+* () videoground-blog-posts - threejs-geometry-attributes-position
+* () r3 of videoground proto
+* () start stand alone repo for videoground based off of r3 of for post example
 
 ### () - THU 04/14/2022
 * (done) quick edit threejs-math-utils
 * (done) quick edit threejs-examples-build-a-box
 * (done) quick edit threejs-examples-waves
 * (done) quick edit threejs-raycaster
-
-* () videoground-beta-world-videos - bw-ep1-simp-logos
-* () videoground-beta-world - house1-bedroom
-
-* videoground-blog-posts - threejs-*
-* videoground-blog-posts - threejs-geometry-attributes-position
-
-* () r3 of videoground proto
-* () start stand alone repo for videoground based off of r3 of for post example
+* (done) videoground-beta-world-videos - bw-ep1-simp-logos
 
 ### () - WED 04/13/2022
 * (done) edit threejs-math-utils
