--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -35,6 +35,7 @@ For this month I want to make the main focus on my new VideoGround project, and 
 ### () - SAT 04/23/2022
 
 ### () - FRI 04/22/2022
+* start post #980 on threejs-object3d-world-to-local
 
 ### () - THU 04/21/2022
 
@@ -43,6 +44,7 @@ For this month I want to make the main focus on my new VideoGround project, and 
 ### () - TUE 04/19/2022
 
 ### () - MON 04/18/2022
+* start post #979 on threejs-
 
 ### () - SUN 04/17/2022
 
@@ -54,6 +56,8 @@ For this month I want to make the main focus on my new VideoGround project, and 
 I will want to keep making new videos for threejs posts this week until I have at least 10 for starters. Focus on posts that are all ready getting some traffic first of course.
 
 ### () - SAT 04/16/2022
+* edit threejs-data-texture
+
 * update hexo site source with header with name of site text
 * update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
 * build and publish
@@ -61,7 +65,7 @@ I will want to keep making new videos for threejs posts this week until I have a
 * () videoground-beta-world-videos - bw-ep1-simp-logos
 
 ### () - FRI 04/15/2022
-* start post #978 on threejs-object3d-world-to-local
+* start post #978 on threejs-data-texture
 
 * update hexo site source with new header background
 * update hexo site source with new header self image
