--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -65,16 +65,20 @@ I will want to keep making new videos for threejs posts this week until I have a
 * () videoground-beta-world-videos - bw-ep1-simp-logos
 
 ### () - FRI 04/15/2022
-* start post #978 on threejs-data-texture
+* (done) start post #978 on threejs-data-texture
+* (done) update hexo site source with new header background
 
-* update hexo site source with new header background
-* update hexo site source with new header self image
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
 
 * () videoground-beta-world-videos - bw-ep1-simp-logos
 * () videoground-blog-posts - threejs-*
 * () videoground-blog-posts - threejs-geometry-attributes-position
 * () r3 of videoground proto
 * () start stand alone repo for videoground based off of r3 of for post example
+
+* () update hexo site source with new header self image
 
 ### () - THU 04/14/2022
 * (done) quick edit threejs-math-utils
