--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -56,17 +56,7 @@ For this month I want to make the main focus on my new VideoGround project, and 
 I will want to keep making new videos for threejs posts this week until I have at least 10 for starters. Focus on posts that are all ready getting some traffic first of course.
 
 ### () - SAT 04/16/2022
-* edit threejs-data-texture
-
-* update hexo site source with header with name of site text
-* update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
-* build and publish
-
-* () videoground-beta-world-videos - bw-ep1-simp-logos
-
-### () - FRI 04/15/2022
-* (done) start post #978 on threejs-data-texture
-* (done) update hexo site source with new header background
+* () edit threejs-data-texture
 
 * () quick edit threejs-
 * () quick edit threejs-
@@ -79,6 +69,16 @@ I will want to keep making new videos for threejs posts this week until I have a
 * () start stand alone repo for videoground based off of r3 of for post example
 
 * () update hexo site source with new header self image
+
+* update hexo site source with header with name of site text
+* update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
+* build and publish
+
+* () videoground-beta-world-videos - bw-ep1-simp-logos
+
+### () - FRI 04/15/2022
+* (done) start post #978 on threejs-data-texture
+* (done) update hexo site source with new header background
 
 ### () - THU 04/14/2022
 * (done) quick edit threejs-math-utils
