--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -56,11 +56,15 @@ For this month I want to make the main focus on my new VideoGround project, and 
 I will want to keep making new videos for threejs posts this week until I have at least 10 for starters. Focus on posts that are all ready getting some traffic first of course.
 
 ### () - SAT 04/16/2022
-* () edit threejs-data-texture
+* (done) edit threejs-data-texture
 
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-buffer-geometry-rotation
+* () quick edit threejs-examples-tree-sphere-world
+* () quick edit threejs-examples-tree-sphere
+* () quick edit threejs-cone
+* () quick edit threejs-examples-biplane
+* () quick edit threejs-examples-biplane-group
+
 
 * () videoground-beta-world-videos - bw-ep1-simp-logos
 * () videoground-blog-posts - threejs-*
