--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -57,13 +57,12 @@ I will want to keep making new videos for threejs posts this week until I have a
 
 ### () - SAT 04/16/2022
 * (done) edit threejs-data-texture
-
-* () quick edit threejs-buffer-geometry-rotation
-* () quick edit threejs-examples-tree-sphere-world
-* () quick edit threejs-examples-tree-sphere
-* () quick edit threejs-cone
-* () quick edit threejs-examples-biplane
-* () quick edit threejs-examples-biplane-group
+* (done) quick edit threejs-buffer-geometry-rotation
+* (done) quick edit threejs-examples-tree-sphere-world
+* (done) quick edit threejs-examples-tree-sphere
+* (done) quick edit threejs-cone
+* (done) quick edit threejs-examples-biplane
+* (done) quick edit threejs-examples-biplane-group
 
 
 * () videoground-beta-world-videos - bw-ep1-simp-logos
