--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -32,21 +32,47 @@ For this month I want to make the main focus on my new VideoGround project, and 
 /////////////// ///////-->
 ## () - SUN 04/17/2022 to  SAT 04/23/2022
 
+This week I would like to finish up with quick edits of older threejs posts so that any addtional editing for the rest of the month forward is more in line with just one post at a time each day.
+
 ### () - SAT 04/23/2022
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
 
 ### () - FRI 04/22/2022
 * start post #980 on threejs-object3d-world-to-local
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
 
 ### () - THU 04/21/2022
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
 
 ### () - WED 04/20/2022
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
 
 ### () - TUE 04/19/2022
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
 
 ### () - MON 04/18/2022
 * start post #979 on threejs-
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
+
 
 ### () - SUN 04/17/2022
+* () quick edit threejs-
+* () quick edit threejs-
+* () quick edit threejs-
+
+* () videoground-beta-world-videos - bw-ep1-simp-logos
 
 <!-- ////////// //////////
     WEEK 3
@@ -77,7 +103,6 @@ I will want to keep making new videos for threejs posts this week until I have a
 * update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
 * build and publish
 
-* () videoground-beta-world-videos - bw-ep1-simp-logos
 
 ### () - FRI 04/15/2022
 * (done) start post #978 on threejs-data-texture
