--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -89,9 +89,8 @@ I will want to keep making new videos for threejs posts this week until I have a
 * (done) quick edit threejs-cone
 * (done) quick edit threejs-examples-biplane
 * (done) quick edit threejs-examples-biplane-group
+* (done) videoground-beta-world-videos - bw-ep1-simp-logos
 
-
-* () videoground-beta-world-videos - bw-ep1-simp-logos
 * () videoground-blog-posts - threejs-*
 * () videoground-blog-posts - threejs-geometry-attributes-position
 * () r3 of videoground proto
