--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -72,7 +72,16 @@ This week I would like to finish up with quick edits of older threejs posts so t
 * () quick edit threejs-
 * () quick edit threejs-
 
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
+* () build and publish
+
 * () videoground-beta-world-videos - bw-ep1-simp-logos
+* () videoground-blog-posts - threejs-*
+* () videoground-blog-posts - threejs-geometry-attributes-position
+* () r3 of videoground proto
+* () start stand alone repo for videoground based off of r3 of for post example
 
 <!-- ////////// //////////
     WEEK 3
@@ -90,18 +99,6 @@ I will want to keep making new videos for threejs posts this week until I have a
 * (done) quick edit threejs-examples-biplane
 * (done) quick edit threejs-examples-biplane-group
 * (done) videoground-beta-world-videos - bw-ep1-simp-logos
-
-* () videoground-blog-posts - threejs-*
-* () videoground-blog-posts - threejs-geometry-attributes-position
-* () r3 of videoground proto
-* () start stand alone repo for videoground based off of r3 of for post example
-
-* () update hexo site source with new header self image
-
-* update hexo site source with header with name of site text
-* update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
-* build and publish
-
 
 ### () - FRI 04/15/2022
 * (done) start post #978 on threejs-data-texture
