--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -13,6 +13,8 @@ For this month I want to make the main focus on my new VideoGround project, and 
 /////////////// ///////-->
 ## () - SUN 04/24/2022 to  SAT 04/30/2022
 
+Continue editing threejs content this week, and with that this should be the last week of 'quick edits'
+
 ### () - SAT 04/30/2022
 
 ### () - FRI 04/29/2022
@@ -24,53 +26,60 @@ For this month I want to make the main focus on my new VideoGround project, and 
 ### () - TUE 04/26/2022
 
 ### () - MON 04/25/2022
+* () quick edit threejs-vector3-clamp
+* () quick edit threejs-vector3-apply-axis-angle
+* () quick edit threejs-vector3-apply-euler
+* () quick edit threejs-light-prope
 
 ### () - SUN 04/24/2022
+* () quick edit threejs-arrow-helper
+* () quick edit threejs-examples-plane-mutate
+* () quick edit threejs-vector3-distance-to
+
 
 <!-- ////////// //////////
     WEEK 4
 /////////////// ///////-->
 ## () - SUN 04/17/2022 to  SAT 04/23/2022
 
-This week I would like to finish up with quick edits of older threejs posts so that any addtional editing for the rest of the month forward is more in line with just one post at a time each day.
+This week I would like to focus on getting the bulk of the quick edits of my whole catalog of threejs content. I might not get this finished this week, but I would still like to get this out of the way so I can then shift gears and go in the direction of starting a process of editing that has more to do with quality rather than quantity of editing.
 
 ### () - SAT 04/23/2022
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-buffer-geometry-attributes-normals
+* () quick edit threejs-buffer-geometry-attributes-uv
+* () quick edit threejs-examples-sphere-mutate
 
 ### () - FRI 04/22/2022
 * start post #980 on threejs-object3d-world-to-local
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-fly-controls
+* () quick edit threejs-buffer-geometry-attributes-position
+* () quick edit threejs-line-fat-width
 
 ### () - THU 04/21/2022
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-mesh-copy
+* () quick edit threejs-object3d-layers
+* () quick edit threejs-alpha-map
 
 ### () - WED 04/20/2022
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-examples-basic-framework
+* () quick edit threejs-edges-geometry
+* () quick edit threejs-shape
 
 ### () - TUE 04/19/2022
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-clock
+* () quick edit threejs-webglrenderer
+* () quick edit threejs-box-geometry
 
 ### () - MON 04/18/2022
 * start post #979 on threejs-
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
-
+* () quick edit threejs-mesh-material-index
+* () quick edit threejs-torus
+* () quick edit threejs-face3-color
 
 ### () - SUN 04/17/2022
-* () quick edit threejs-
-* () quick edit threejs-
-* () quick edit threejs-
+* () quick edit threejs-object3d-visible
+* () quick edit threejs-examples-land-sections
+* () quick edit threejs-object3d-get-world-position
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
@@ -88,7 +97,7 @@ This week I would like to finish up with quick edits of older threejs posts so t
 /////////////// ///////-->
 ## () - SUN 04/03/2022 to  SAT 04/16/2022
 
-I will want to keep making new videos for threejs posts this week until I have at least 10 for starters. Focus on posts that are all ready getting some traffic first of course.
+I will want to keep making new videos for threejs posts this week until I have at least 10 for starters. Focus on posts that are all ready getting some traffic first of course. This is also a week in which I am focusing on 'quick edits' of old threejs posts, and writing new threejs content.
 
 ### () - SAT 04/16/2022
 * (done) edit threejs-data-texture
