--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -42,7 +42,9 @@ Continue editing threejs content this week, and with that this should be the las
 /////////////// ///////-->
 ## () - SUN 04/17/2022 to  SAT 04/23/2022
 
-This week I would like to focus on getting the bulk of the quick edits of my whole catalog of threejs content. I might not get this finished this week, but I would still like to get this out of the way so I can then shift gears and go in the direction of starting a process of editing that has more to do with quality rather than quantity of editing.
+This week I would like to focus on getting the bulk of the quick edits of my whole catalog of threejs content done. I might not get this finished this week, but I would still like to get this out of the way so I can then shift gears and go in the direction of starting a process of editing that has more to do with quality rather than quantity of editing.
+
+Outside of the editing of threejs content there is also writing new threejs posts this week, and also working on more videos for posts as well as getting at least a little done on the beta world project when it comes to videos.
 
 ### () - SAT 04/23/2022
 * () quick edit threejs-buffer-geometry-attributes-normals
