--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -79,9 +79,9 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () quick edit threejs-face3-color
 
 ### () - SUN 04/17/2022
-* () quick edit threejs-object3d-visible
-* () quick edit threejs-examples-land-sections
-* () quick edit threejs-object3d-get-world-position
+* (done) quick edit threejs-object3d-visible
+* (done) quick edit threejs-examples-land-sections
+* (done) quick edit threejs-object3d-get-world-position
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
