--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -72,27 +72,29 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () quick edit threejs-webglrenderer
 * () quick edit threejs-box-geometry
 
+* () build and publish
+
 ### () - MON 04/18/2022
-* start post #979 on threejs-
 * () quick edit threejs-mesh-material-index
 * () quick edit threejs-torus
 * () quick edit threejs-face3-color
+
+* start post #979 on threejs-
+
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
+
+* () videoground-blog-posts - threejs-*
+* () videoground-blog-posts - threejs-geometry-attributes-position
+* () r3 of videoground proto
+* () start stand alone repo for videoground based off of r3 of for post example
 
 ### () - SUN 04/17/2022
 * (done) quick edit threejs-object3d-visible
 * (done) quick edit threejs-examples-land-sections
 * (done) quick edit threejs-object3d-get-world-position
-
-* () update hexo site source with new header self image
-* () update hexo site source with header with name of site text
-* () update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
-* () build and publish
-
-* () videoground-beta-world-videos - bw-ep1-simp-logos
-* () videoground-blog-posts - threejs-*
-* () videoground-blog-posts - threejs-geometry-attributes-position
-* () r3 of videoground proto
-* () start stand alone repo for videoground based off of r3 of for post example
+* (done) videoground-beta-world-videos - bw-ep1-simp-logos
 
 <!-- ////////// //////////
     WEEK 3
