--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -75,7 +75,7 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () build and publish
 
 ### () - MON 04/18/2022
-* () quick edit threejs-mesh-material-index
+* (done) edit threejs-mesh-material-index
 * () quick edit threejs-torus
 * () quick edit threejs-face3-color
 
