--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -76,8 +76,8 @@ Outside of the editing of threejs content there is also writing new threejs post
 
 ### () - MON 04/18/2022
 * (done) edit threejs-mesh-material-index
-* () quick edit threejs-torus
-* () quick edit threejs-face3-color
+* (done) quick edit threejs-torus
+* (done) quick edit threejs-face3-color
 
 * start post #979 on threejs-
 
