--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -79,7 +79,7 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) quick edit threejs-torus
 * (done) quick edit threejs-face3-color
 
-* start post #979 on threejs-
+* start post #979 on threejs-example-weird-walk-one
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
