--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -71,15 +71,9 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () quick edit threejs-clock
 * () quick edit threejs-webglrenderer
 * () quick edit threejs-box-geometry
+* () edit threejs-example-weird-walk-one
 
 * () build and publish
-
-### () - MON 04/18/2022
-* (done) edit threejs-mesh-material-index
-* (done) quick edit threejs-torus
-* (done) quick edit threejs-face3-color
-
-* start post #979 on threejs-example-weird-walk-one
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
@@ -89,6 +83,13 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () videoground-blog-posts - threejs-geometry-attributes-position
 * () r3 of videoground proto
 * () start stand alone repo for videoground based off of r3 of for post example
+
+
+### () - MON 04/18/2022
+* (done) edit threejs-mesh-material-index
+* (done) quick edit threejs-torus
+* (done) quick edit threejs-face3-color
+* (done) start post #979 on threejs-example-weird-walk-one
 
 ### () - SUN 04/17/2022
 * (done) quick edit threejs-object3d-visible
