--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -68,9 +68,9 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () quick edit threejs-shape
 
 ### () - TUE 04/19/2022
-* () quick edit threejs-clock
-* () quick edit threejs-webglrenderer
-* () quick edit threejs-box-geometry
+* (done) quick edit threejs-clock
+* (done) quick edit threejs-webglrenderer
+* (done) quick edit threejs-box-geometry
 * () edit threejs-example-weird-walk-one
 
 * () build and publish
