--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -71,7 +71,8 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) quick edit threejs-clock
 * (done) quick edit threejs-webglrenderer
 * (done) quick edit threejs-box-geometry
-* () edit threejs-example-weird-walk-one
+* () edit threejs-examples-weird-walk-one
+* () edit threejs-examples
 
 * () build and publish
 
