--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -67,24 +67,23 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () quick edit threejs-edges-geometry
 * () quick edit threejs-shape
 
-### () - TUE 04/19/2022
-* (done) quick edit threejs-clock
-* (done) quick edit threejs-webglrenderer
-* (done) quick edit threejs-box-geometry
-* (done) edit threejs-examples-weird-walk-one
-* (done) edit threejs-examples
-
-* () build and publish
-
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
 * () update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
 
 * () videoground-blog-posts - threejs-*
 * () videoground-blog-posts - threejs-geometry-attributes-position
-* () r3 of videoground proto
-* () start stand alone repo for videoground based off of r3 of for post example
 
+* () build and publish
+
+* () start stand alone repo for videoground based off of r3 of for post example in electronjs
+
+### () - TUE 04/19/2022
+* (done) quick edit threejs-clock
+* (done) quick edit threejs-webglrenderer
+* (done) quick edit threejs-box-geometry
+* (done) edit threejs-examples-weird-walk-one
+* (done) edit threejs-examples
 
 ### () - MON 04/18/2022
 * (done) edit threejs-mesh-material-index
