--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -26,15 +26,9 @@ Continue editing threejs content this week, and with that this should be the las
 ### () - TUE 04/26/2022
 
 ### () - MON 04/25/2022
-* () quick edit threejs-vector3-clamp
-* () quick edit threejs-vector3-apply-axis-angle
-* () quick edit threejs-vector3-apply-euler
-* () quick edit threejs-light-prope
 
 ### () - SUN 04/24/2022
-* () quick edit threejs-arrow-helper
-* () quick edit threejs-examples-plane-mutate
-* () quick edit threejs-vector3-distance-to
+
 
 
 <!-- ////////// //////////
@@ -47,25 +41,37 @@ This week I would like to focus on getting the bulk of the quick edits of my who
 Outside of the editing of threejs content there is also writing new threejs posts this week, and also working on more videos for posts as well as getting at least a little done on the beta world project when it comes to videos.
 
 ### () - SAT 04/23/2022
+
+
+### () - FRI 04/22/2022
+* start post #980 on threejs-example-weird-walk-two
+
+
+### () - THU 04/21/2022
 * () quick edit threejs-buffer-geometry-attributes-normals
 * () quick edit threejs-buffer-geometry-attributes-uv
 * () quick edit threejs-examples-sphere-mutate
 
-### () - FRI 04/22/2022
-* start post #980 on threejs-example-weird-walk-two
+* () quick edit threejs-arrow-helper
+* () quick edit threejs-examples-plane-mutate
+* () quick edit threejs-vector3-distance-to
+
+* () quick edit threejs-vector3-clamp
+* () quick edit threejs-vector3-apply-axis-angle
+* () quick edit threejs-vector3-apply-euler
+* () quick edit threejs-light-prope
+
+### () - WED 04/20/2022
+* (done) quick edit threejs-examples-basic-framework
+* (done) quick edit threejs-edges-geometry
+* (done) quick edit threejs-shape
+* (done) quick edit threejs-mesh-copy
+* (done) quick edit threejs-object3d-layers
+* (done) quick edit threejs-alpha-map
+
 * () quick edit threejs-fly-controls
 * () quick edit threejs-buffer-geometry-attributes-position
 * () quick edit threejs-line-fat-width
-
-### () - THU 04/21/2022
-* () quick edit threejs-mesh-copy
-* () quick edit threejs-object3d-layers
-* () quick edit threejs-alpha-map
-
-### () - WED 04/20/2022
-* () quick edit threejs-examples-basic-framework
-* () quick edit threejs-edges-geometry
-* () quick edit threejs-shape
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
