--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -68,10 +68,9 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) quick edit threejs-mesh-copy
 * (done) quick edit threejs-object3d-layers
 * (done) quick edit threejs-alpha-map
-
-* () quick edit threejs-fly-controls
-* () quick edit threejs-buffer-geometry-attributes-position
-* () quick edit threejs-line-fat-width
+* (done) quick edit threejs-fly-controls
+* (done) quick edit threejs-buffer-geometry-attributes-position
+* (done) quick edit threejs-line-fat-width
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
