--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -45,21 +45,11 @@ Outside of the editing of threejs content there is also writing new threejs post
 
 ### () - FRI 04/22/2022
 * start post #980 on threejs-example-weird-walk-two
+* () edit threejs-examples-plane-mutate
 
 
 ### () - THU 04/21/2022
-* () quick edit threejs-buffer-geometry-attributes-normals
-* () quick edit threejs-buffer-geometry-attributes-uv
-* () quick edit threejs-examples-sphere-mutate
-
-* () quick edit threejs-arrow-helper
-* () quick edit threejs-examples-plane-mutate
-* () quick edit threejs-vector3-distance-to
-
-* () quick edit threejs-vector3-clamp
-* () quick edit threejs-vector3-apply-axis-angle
-* () quick edit threejs-vector3-apply-euler
-* () quick edit threejs-light-prope
+* () edit threejs-arrow-helper
 
 ### () - WED 04/20/2022
 * (done) quick edit threejs-examples-basic-framework
@@ -71,6 +61,14 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) quick edit threejs-fly-controls
 * (done) quick edit threejs-buffer-geometry-attributes-position
 * (done) quick edit threejs-line-fat-width
+* (done) quick edit threejs-buffer-geometry-attributes-normals
+* (done) quick edit threejs-buffer-geometry-attributes-uv
+* (done) quick edit threejs-examples-sphere-mutate
+* (done) quick edit threejs-vector3-distance-to
+* (done) quick edit threejs-light-prope
+* (done) quick edit threejs-vector3-clamp
+* (done) quick edit threejs-vector3-apply-axis-angle
+* (done) quick edit threejs-vector3-apply-euler
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
