--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -69,10 +69,11 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) quick edit threejs-vector3-clamp
 * (done) quick edit threejs-vector3-apply-axis-angle
 * (done) quick edit threejs-vector3-apply-euler
+* (done) update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
+
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
-* () update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
 
 * () videoground-blog-posts - threejs-*
 * () videoground-blog-posts - threejs-geometry-attributes-position
