--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -49,7 +49,16 @@ Outside of the editing of threejs content there is also writing new threejs post
 
 
 ### () - THU 04/21/2022
-* () edit threejs-arrow-helper
+
+* () edit threejs-*
+* () edit threejs-*
+
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () videoground-blog-posts - threejs-*
+* () build and publish
+* () start stand alone repo for videoground based off of r3 of for post example in electronjs
+
 
 ### () - WED 04/20/2022
 * (done) quick edit threejs-examples-basic-framework
@@ -70,17 +79,7 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) quick edit threejs-vector3-apply-axis-angle
 * (done) quick edit threejs-vector3-apply-euler
 * (done) update hexo site source with new css for you tube embeds video size (reactive size would be nice with media calls)
-
-
-* () update hexo site source with new header self image
-* () update hexo site source with header with name of site text
-
-* () videoground-blog-posts - threejs-*
-* () videoground-blog-posts - threejs-geometry-attributes-position
-
-* () build and publish
-
-* () start stand alone repo for videoground based off of r3 of for post example in electronjs
+* (done) videoground-blog-posts - threejs-geometry-attributes-position
 
 ### () - TUE 04/19/2022
 * (done) quick edit threejs-clock
