--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -26,8 +26,12 @@ Continue editing threejs content this week, and with that this should be the las
 ### () - TUE 04/26/2022
 
 ### () - MON 04/25/2022
+* () edit threejs-buffer-geometry
+* () edit threejs-normal-map
 
 ### () - SUN 04/24/2022
+* () edit threejs-normal-material
+* () edit threejs-examples-dae-tools
 
 
 
@@ -41,21 +45,24 @@ This week I would like to focus on getting the bulk of the quick edits of my who
 Outside of the editing of threejs content there is also writing new threejs posts this week, and also working on more videos for posts as well as getting at least a little done on the beta world project when it comes to videos.
 
 ### () - SAT 04/23/2022
-
+* () edit hreejs-scene
+* () edit threejs-emissive-map
 
 ### () - FRI 04/22/2022
 * start post #980 on threejs-example-weird-walk-two
-* () edit threejs-examples-plane-mutate
+* () edit threejs-texture-loader
 
 
 ### () - THU 04/21/2022
 
-* () edit threejs-*
-* () edit threejs-*
+* () edit threejs-examples-plane-mutate
+* () edit threejs-standard-material
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
+
 * () videoground-blog-posts - threejs-*
+
 * () build and publish
 * () start stand alone repo for videoground based off of r3 of for post example in electronjs
 
