--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -18,6 +18,7 @@ Continue editing threejs content this week, and with that this should be the las
 ### () - SAT 04/30/2022
 
 ### () - FRI 04/29/2022
+* start post #982 on threejs-
 
 ### () - THU 04/28/2022
 
@@ -26,6 +27,7 @@ Continue editing threejs content this week, and with that this should be the las
 ### () - TUE 04/26/2022
 
 ### () - MON 04/25/2022
+* start post #981 on threejs-example-weird-walk-two
 * () edit threejs-buffer-geometry
 * () edit threejs-normal-map
 
@@ -49,19 +51,18 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () edit threejs-emissive-map
 
 ### () - FRI 04/22/2022
-* start post #980 on threejs-example-weird-walk-two
+* start post #980 on threejs-example-buffer-geometry-compute-vertex-normals
 * () edit threejs-texture-loader
 
 
 ### () - THU 04/21/2022
-
-* () edit threejs-examples-plane-mutate
+* (done) edit threejs-examples-plane-mutate
 * () edit threejs-standard-material
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
 
-* () videoground-blog-posts - threejs-*
+* () videoground-blog-posts - threejs-examples-plane-mutate
 
 * () build and publish
 * () start stand alone repo for videoground based off of r3 of for post example in electronjs
