--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -57,7 +57,7 @@ Outside of the editing of threejs content there is also writing new threejs post
 
 ### () - THU 04/21/2022
 * (done) edit threejs-examples-plane-mutate
-* () edit threejs-standard-material
+* (done) edit threejs-standard-material
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
