--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -49,6 +49,7 @@ Outside of the editing of threejs content there is also writing new threejs post
 ### () - SAT 04/23/2022
 * () edit hreejs-scene
 * () edit threejs-emissive-map
+* () build and publish
 
 ### () - FRI 04/22/2022
 * start post #980 on threejs-example-buffer-geometry-compute-vertex-normals
@@ -63,8 +64,9 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () update hexo site source with header with name of site text
 
 * () videoground-blog-posts - threejs-examples-plane-mutate
+* () videoground-blog-posts - threejs-standard-material
 
-* () build and publish
+
 * () start stand alone repo for videoground based off of r3 of for post example in electronjs
 
 
