--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -51,24 +51,26 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () edit threejs-emissive-map
 * () build and publish
 
-### () - FRI 04/22/2022
-* start post #980 on threejs-example-buffer-geometry-compute-vertex-normals
-* () edit threejs-texture-loader
+* () videoground-blog-posts - threejs-
+* () videoground-blog-posts - threejs-
 
+### () - FRI 04/22/2022
+* () start post #980 on threejs-example-buffer-geometry-compute-vertex-normals
+* () edit threejs-
+* () edit threejs-
+
+* (done) videoground-blog-posts - threejs-examples-weird-walk-one
+* () videoground-blog-posts - threejs-
+
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () start stand alone repo for videoground based off of r3 of for post example in electronjs
 
 ### () - THU 04/21/2022
 * (done) edit threejs-examples-plane-mutate
 * (done) edit threejs-standard-material
-
-* () update hexo site source with new header self image
-* () update hexo site source with header with name of site text
-
-* () videoground-blog-posts - threejs-examples-plane-mutate
-* () videoground-blog-posts - threejs-standard-material
-
-
-* () start stand alone repo for videoground based off of r3 of for post example in electronjs
-
+* (done) videoground-blog-posts - threejs-examples-plane-mutate
+* (done) videoground-blog-posts - threejs-standard-material
 
 ### () - WED 04/20/2022
 * (done) quick edit threejs-examples-basic-framework
