--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -55,7 +55,8 @@ Outside of the editing of threejs content there is also writing new threejs post
 * () videoground-blog-posts - threejs-
 
 ### () - FRI 04/22/2022
-* () start post #980 on threejs-example-buffer-geometry-compute-vertex-normals
+* (done) start for post folder for threejs-buffer-geometry-compute-vertex-normals
+* (done) start post #980 on threejs-buffer-geometry-compute-vertex-normals
 * () edit threejs-
 * () edit threejs-
 
