--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -57,12 +57,11 @@ Outside of the editing of threejs content there is also writing new threejs post
 ### () - FRI 04/22/2022
 * (done) start for post folder for threejs-buffer-geometry-compute-vertex-normals
 * (done) start post #980 on threejs-buffer-geometry-compute-vertex-normals
-* () edit threejs-
-* () edit threejs-
-
+* (done) edit threejs-texture-loader
+* (done) edit threejs-scene
 * (done) videoground-blog-posts - threejs-examples-weird-walk-one
-* () videoground-blog-posts - threejs-
 
+* () videoground-blog-posts - threejs-
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
 * () start stand alone repo for videoground based off of r3 of for post example in electronjs
