--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -60,8 +60,8 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) edit threejs-texture-loader
 * (done) edit threejs-scene
 * (done) videoground-blog-posts - threejs-examples-weird-walk-one
+* (done) videoground-blog-posts - threejs-scene
 
-* () videoground-blog-posts - threejs-
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
 * () start stand alone repo for videoground based off of r3 of for post example in electronjs
