--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -13,7 +13,9 @@ For this month I want to make the main focus on my new VideoGround project, and 
 /////////////// ///////-->
 ## () - SUN 04/24/2022 to  SAT 04/30/2022
 
-Continue editing threejs content this week, and with that this should be the last week of 'quick edits'
+I finished up with the process of quick edits last week, now I can start focusing more so I just one or two posts each day and put a little more effort into what I change and add for each post that I revise. For this week I am thinking that I should stick with about two posts per day, and the process should involve a full proof read, link to test threejs, and even an optional demo video. 
+
+This might prove to be a bit to much, but maybe only for the long run at least. If I do say in my lane with this category in time two a day will become one a day, and even eventually one a week. 
 
 ### () - SAT 04/30/2022
 
@@ -47,11 +49,15 @@ This week I would like to focus on getting the bulk of the quick edits of my who
 Outside of the editing of threejs content there is also writing new threejs posts this week, and also working on more videos for posts as well as getting at least a little done on the beta world project when it comes to videos.
 
 ### () - SAT 04/23/2022
-* () edit hreejs-scene
 * () edit threejs-emissive-map
+
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () start stand alone repo for videoground based off of r3 of for post example in electronjs
+
 * () build and publish
 
-* () videoground-blog-posts - threejs-
+* () videoground-blog-posts - threejs-emissive-map
 * () videoground-blog-posts - threejs-
 
 ### () - FRI 04/22/2022
@@ -62,9 +68,6 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) videoground-blog-posts - threejs-examples-weird-walk-one
 * (done) videoground-blog-posts - threejs-scene
 
-* () update hexo site source with new header self image
-* () update hexo site source with header with name of site text
-* () start stand alone repo for videoground based off of r3 of for post example in electronjs
 
 ### () - THU 04/21/2022
 * (done) edit threejs-examples-plane-mutate
