--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -34,7 +34,6 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * () edit threejs-normal-map
 
 ### () - SUN 04/24/2022
-* () edit threejs-normal-material
 * () edit threejs-examples-dae-tools
 
 
@@ -49,7 +48,8 @@ This week I would like to focus on getting the bulk of the quick edits of my who
 Outside of the editing of threejs content there is also writing new threejs posts this week, and also working on more videos for posts as well as getting at least a little done on the beta world project when it comes to videos.
 
 ### () - SAT 04/23/2022
-* () edit threejs-emissive-map
+* (done) edit threejs-emissive-map
+* () edit threejs-normal-material
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
