--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -29,14 +29,20 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 ### () - TUE 04/26/2022
 
 ### () - MON 04/25/2022
+* (done) start stand alone repo for videoground based off of r3 of for post example in electronjs
+
 * start post #981 on threejs-example-weird-walk-two
+
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () build and publish
+
+* () videoground-blog-posts - threejs-emissive-map
 * () edit threejs-buffer-geometry
-* () edit threejs-normal-map
 
 ### () - SUN 04/24/2022
-* () edit threejs-examples-dae-tools
-
-
+* (done) edit threejs-object3d-get-world-position
+* (done) videoground-blog-posts - threejs-object3d-get-world-position
 
 <!-- ////////// //////////
     WEEK 4
@@ -49,16 +55,8 @@ Outside of the editing of threejs content there is also writing new threejs post
 
 ### () - SAT 04/23/2022
 * (done) edit threejs-emissive-map
-* () edit threejs-normal-material
-
-* () update hexo site source with new header self image
-* () update hexo site source with header with name of site text
-* () start stand alone repo for videoground based off of r3 of for post example in electronjs
-
-* () build and publish
-
-* () videoground-blog-posts - threejs-emissive-map
-* () videoground-blog-posts - threejs-
+* (done) edit threejs-normal-material
+* (done) edit threejs-normal-map
 
 ### () - FRI 04/22/2022
 * (done) start for post folder for threejs-buffer-geometry-compute-vertex-normals
@@ -67,7 +65,6 @@ Outside of the editing of threejs content there is also writing new threejs post
 * (done) edit threejs-scene
 * (done) videoground-blog-posts - threejs-examples-weird-walk-one
 * (done) videoground-blog-posts - threejs-scene
-
 
 ### () - THU 04/21/2022
 * (done) edit threejs-examples-plane-mutate
