--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -1,10 +1,8 @@
 # todo list for May 2022
 
-HEROKU, EXPRESSJS, NODEJS, MVP-LITTLE-CITY, ITCHIO, ELECTRONJS
+THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
-Way back in 2018 I wrote just three quick posts on [Heroku](https://en.wikipedia.org/wiki/Heroku) which is a [Platform as a Service](https://en.wikipedia.org/wiki/Platform_as_a_service) \(PaaS\) Company. Although the posts are of very poor quality, for what they are they are actually doing well. After doing some quick research on Google trends it would seem that there is a fair amount of demand for content relevant to using Heroku, as well as similar services. This month then I am thinking that the aim should be to edit those older posts, and also expand the category a bit to say at least maybe ten posts or so.
-
-In order to write about using heroku though I also need to have some software to deploy as a herku project of one or more application that compose an over all services of some kind. So then with that said this is also an opportunity to edit and expand my content on nodejs and express as that is still the main programing environment tat I would like to worm in to make the kind of applications that I would deploy to heroku.
+This month I think the plan should be to stay in my lane with threejs for at least one more Month. Durring this time I should also work on my videoground project as that is clsly related to doing so. With that said there is also the potential to write about other things to which videground is based on.
 
 ## new posts
 
