--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -30,6 +30,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 
 ### () - MON 04/25/2022
 * (done) start stand alone repo for videoground based off of r3 of for post example in electronjs
+* () edit threejs-examples-dae-tools
+* () edit threejs-buffer-geometry
 
 * start post #981 on threejs-example-weird-walk-two
 
@@ -38,7 +40,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * () build and publish
 
 * () videoground-blog-posts - threejs-emissive-map
-* () edit threejs-buffer-geometry
+
 
 ### () - SUN 04/24/2022
 * (done) edit threejs-object3d-get-world-position
