--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -30,8 +30,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 
 ### () - MON 04/25/2022
 * (done) start stand alone repo for videoground based off of r3 of for post example in electronjs
-* () edit threejs-examples-dae-tools
-* () edit threejs-buffer-geometry
+* (done) edit threejs-examples-dae-tools
+* (done) edit threejs-buffer-geometry
 
 * start post #981 on threejs-example-weird-walk-two
 
